--- a/index.html
+++ b/index.html
@@ -2,9 +2,67 @@
  <html>
    <head>
      <meta charset="utf-8">
-     <title></title>
+     <title>Chocolate Pizza</title>
    </head>
    <body>
+     //header-nav start
+     <header>
+       <nav>
+         <section>
+           <div id="logo">
+              <img src="logo.png" alt="logo">
+           </div>
+           <div id="company">
+            <ul>
+              <li>Delicious</li>
+              <li>THE BEST FOOD BLOG ON THE WEB</li>
+            </ul>
+          </div>
+            <div id="social">
+              <ul>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+              </ul>
+            </div>
+         </section>
+       </nav>
+     </header>
+          //header-nav end
+     <hr>
+     <section>
+       <div id="recipe-name">
+        <p>Chocolate Pizza</p>
+        <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
+      </div>
+      <div id="print">
+        <ul>
+          <li><img src="" alt=""></li>
+          <li><img src="" alt=""></li>
+        </ul>
+      </div>
+     </section>
+     <section>
+       <div id="pizza-img"></div>
+     </section>
+     <section>
+       <div id="">
+
+       </div>
+     </section>
 
    </body>
+
+
+
+
+
+
+
+
  </html>
