--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title>Chocolate Pizza</title>
    </head>
    <body>
-     //header-nav start
+      <!--header-nav start.-->
      <header>
        <nav>
          <section>
@@ -33,8 +33,9 @@
          </section>
        </nav>
      </header>
-          //header-nav end
+            <!--header-nav end.-->
      <hr>
+            <!--start pizze photo section-->
      <section>
        <div id="recipe-name">
         <p>Chocolate Pizza</p>
@@ -50,12 +51,51 @@
      <section>
        <div id="pizza-img"></div>
      </section>
+          <!--end pizze photo section-->
+          <!--start recipie section-->
      <section>
-       <div id="">
-
+       <div id="p-text1">
+         <p>For the fig-swirl: melt butter over medium heat in a saucepan. Add brown sugar and stir to disolve. Halve all of the figs and toss into a saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one of two stirs, set aside and let cool completely.</p><br />
        </div>
+       <div id="p-text2">
+         <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewar. Whisk is in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p><br />
+       </div>
+       <div id="p-text3">
+         <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+       </div>
+       <section>
+         <div id="notepad"><img src=""></div>
+       </section>
      </section>
 
+           <hr>
+
+           <!--start of author-->
+      <section>
+        <div id="headshoot">
+          <img src="">
+        </div>
+        <div id="Author">
+          <ul>
+            <li>Vanessa Stevenson</li>
+            <li>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</li>
+          </ul>
+        </div>
+        <div id="share">
+          <button type="button" name="button">SHARE RECIPE</button>
+        </div>
+      </section>
+  <!--end of author-->
+  <!--footer start-->
+    <footer>
+      <div class="line">
+        <span class"logo"></span>
+      </div>
+      <div>
+        <p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
+        <p>Proudly published with Ghost.</p>
+      </div>
+  </footer>
    </body>
 
 
