--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <nav>
          <section>
            <div id="logo">
-              <img src="logo.png" alt="logo">
+              <img src="img/logo.png" alt="logo">
            </div>
            <div id="company">
             <ul>
@@ -20,14 +20,14 @@
           </div>
             <div id="social">
               <ul>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
-                <li><a href="#"><img src="" alt=""></a></li>
+                <li><img src="img/fb-icon.png"></li>
+                <li><img src="img/twit-icon.png"></li>
+                <li><img src="img/gp-icon.png"></li>
+                <li><img src="img/insta-icon.png"></li>
+                <li><img src="img/flic-icon.png"></li>
+                <li><img src="img/pint-icon.png"></li>
+                <li><img src="img/rss-icon.png"></li>
+                <li><img src="img/mail-icon.png"></li>
               </ul>
             </div>
          </section>
@@ -43,13 +43,13 @@
       </div>
       <div id="print">
         <ul>
-          <li><img src="" alt=""></li>
-          <li><img src="" alt=""></li>
+          <li><img src="img/print-icon.png"></li>
+          <li>PRINT</li>
         </ul>
       </div>
      </section>
      <section>
-       <div id="pizza-img"></div>
+       <div id="pizza-img"><img src="img/choco-pizza.png"></div>
      </section>
           <!--end pizze photo section-->
           <!--start recipie section-->
@@ -64,7 +64,7 @@
          <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
        </div>
        <section>
-         <div id="notepad"><img src=""></div>
+         <div id="notepad"><img src="img/list-bg.png"></div>
        </section>
      </section>
 
@@ -77,6 +77,7 @@
         </div>
         <div id="Author">
           <ul>
+            <li><img src="img/van-pic.png"></li>
             <li>Vanessa Stevenson</li>
             <li>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</li>
           </ul>
@@ -89,9 +90,9 @@
   <!--footer start-->
     <footer>
       <div class="line">
-        <span class"logo"></span>
-      </div>
-      <div>
+        <span class="logo"></span>
+    </div>
+
         <p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
         <p>Proudly published with Ghost.</p>
       </div>
