--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
    <head>
      <meta charset="utf-8">
      <title>Chocolate Pizza</title>
+     <link rel="stylesheet" href="style.css">
    </head>
    <body>
       <!--header-nav start.-->
      <header>
-       <nav>
-         <section>
-           <div id="logo">
+        <section>
+          <nav>
+           <div id="top">
               <img src="img/logo.png" alt="logo">
            </div>
            <div id="company">
@@ -18,20 +19,20 @@
               <li>THE BEST FOOD BLOG ON THE WEB</li>
             </ul>
           </div>
-            <div id="social">
-              <ul>
-                <li><img src="img/fb-icon.png"></li>
-                <li><img src="img/twit-icon.png"></li>
-                <li><img src="img/gp-icon.png"></li>
-                <li><img src="img/insta-icon.png"></li>
-                <li><img src="img/flic-icon.png"></li>
-                <li><img src="img/pint-icon.png"></li>
-                <li><img src="img/rss-icon.png"></li>
-                <li><img src="img/mail-icon.png"></li>
+            <div id="menu">
+              <ul id="social">
+                <li id="socialLogo"><img src="img/fb-icon.png"></li>
+                <li id="socialLogo"><img src="img/twit-icon.png"></li>
+                <li id="socialLogo"><img src="img/gp-icon.png"></li>
+                <li id="socialLogo"><img src="img/insta-icon.png"></li>
+                <li id="socialLogo"><img src="img/flic-icon.png"></li>
+                <li id="socialLogo"><img src="img/pint-icon.png"></li>
+                <li id="socialLogo"><img src="img/rss-icon.png"></li>
+                <li id="socialLogo"><img src="img/mail-icon.png"></li>
               </ul>
             </div>
-         </section>
-       </nav>
+          </nav>
+      </section>
      </header>
             <!--header-nav end.-->
      <hr>
