--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </div>
       <div id="print">
         <ul>
-          <li><img src="img/print-icon.png"></li>
-          <li>PRINT</li>
+          <li id="print-pic"><img src="img/print-icon.png"></li>
+          <li id="print-pic">PRINT</li>
         </ul>
       </div>
      </section>
@@ -64,8 +64,16 @@
        <div id="p-text3">
          <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
        </div>
-       <section>
-         <div id="notepad"><img src="img/list-bg.png"></div>
+       <section id="container">
+         <div id="image"><img src="img/list-bg.png"></div>
+           <ul id="text">
+             <li>1 1/2 cups milk</li>
+             <li>1/2 cup marscapone</li>
+             <li>1/2 tsp pink salt</li>
+             <li>1 lb Black Mission Figs</li>
+             <li>1/2 cup brown sugar</li>
+             <li>2-4 tbsp water</li>
+           </ul>
        </section>
      </section>
 
@@ -73,21 +81,24 @@
 
            <!--start of author-->
       <section>
-        <div id="headshoot">
+        <div id="headshot">
           <img src="">
         </div>
         <div id="Author">
           <ul>
-            <li><img src="img/van-pic.png"></li>
+            <li id="author-info"><img src="img/van-pic.png"></li>
             <li>Vanessa Stevenson</li>
             <li>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</li>
           </ul>
+          <div id="share">
+            <button type="button" name="button">SHARE RECIPE</button>
+          </div>
         </div>
-        <div id="share">
-          <button type="button" name="button">SHARE RECIPE</button>
-        </div>
+
       </section>
   <!--end of author-->
+
+
   <!--footer start-->
     <footer>
       <div class="line">
