--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<header>
 		<section>
 			<nav>
-				<div id="top"><img alt="logo" src="img/logo.png"></div>
-				<div id="company">
+				<div class="top"><img alt="logo" src="img/logo.png"></div>
+				<div class="company">
 					<ul>
-						<li id="#logo">Delicious</li>
+						<li class="#logo">Delicious</li>
 						<li id="tagline">THE BEST FOOD BLOG ON THE WEB</li>
 					</ul>
 				</div>
@@ -63,7 +63,9 @@
 		</div><!-- checkbox by abdulmalik: http://jsfiddle.net/abdulmalik/BMMmp/ -->
 		<section id="container">
 			<div id="image"><img src="img/list-bg.png"></div>
-			<ul id="text">
+      <div class="ingredients1">
+
+			<ul id="text1">
 				<li><input type="checkbox"> <label>1 1/2 cups milk</label><div style="clear:both"></div></li>
 				<li><input type="checkbox"> <label>1/2 cup marscapone</label></li>
 				<li style="list-style: none"><label></label></li>
@@ -75,7 +77,11 @@
 				<li style="list-style: none"><label></label></li>
 				<li><label><input type="checkbox"> <label>2-4 tbsp water</label></label></li>
 				<li style="list-style: none"><label></label></li>
-        <li><label><input type="checkbox"> <label>1 1/2 cups heavy cream</label>
+</ul>
+</div>
+<div class="ingredients2">
+		<ul id="text2">
+           <li><label><input type="checkbox"><label>1 1/2 cups heavy cream</label>
         </label></li>
         <li><label><input type="checkbox"><label>1/3 granulated</label>
         </label></li> sugar</label></label></li>
@@ -88,8 +94,8 @@
         <li><label><input type="checkbox"> <label>1 cup honey roasted pecans, roughly chopped</label>
         </label></li>
 			</ul>
+    </div>
 		</section>
-	</section>
 	<hr>
 	<!--start of author-->
 	<section>
@@ -108,8 +114,8 @@
 				<label><button name="button" type="button"><label>SHARE RECIPE</label></button></label>
 			</div>
 		</div>
-	</section><!--end of author-->
-	<!--footer start-->
+	</section>
+	<hr id="solid">
 	<footer>
 		<div class="line">
 			<span class="logo"></span>
