--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
 </head>
 <body>
-	<!--header-nav start.-->
 	<header>
 		<section>
 			<nav>
@@ -60,68 +59,65 @@
 		</div>
 		<div id="p-text3">
 			<p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
-		</div><!-- checkbox by abdulmalik: http://jsfiddle.net/abdulmalik/BMMmp/ -->
+		</div>
 		<section id="container">
 			<div id="image"><img src="img/list-bg.png"></div>
-      <div class="ingredients1">
-
-			<ul id="text1">
-				<li><input type="checkbox"> <label>1 1/2 cups milk</label><div style="clear:both"></div></li>
-				<li><input type="checkbox"> <label>1/2 cup marscapone</label></li>
-				<li style="list-style: none"><label></label></li>
-				<li><label><input type="checkbox"> <label>1/2 tsp pink salt</label></label></li>
-				<li style="list-style: none"><label></label></li>
-				<li><label><input type="checkbox"> <label>1 lb Black Mission Figs</label></label></li>
-				<li style="list-style: none"><label></label></li>
-				<li><label><input type="checkbox"> <label>1/2 cup brown sugar</label></label></li>
-				<li style="list-style: none"><label></label></li>
-				<li><label><input type="checkbox"> <label>2-4 tbsp water</label></label></li>
-				<li style="list-style: none"><label></label></li>
-</ul>
-</div>
-<div class="ingredients2">
-		<ul id="text2">
-           <li><label><input type="checkbox"><label>1 1/2 cups heavy cream</label>
-        </label></li>
-        <li><label><input type="checkbox"><label>1/3 granulated</label>
-        </label></li> sugar</label></label></li>
-        <li><label><input type="checkbox"><label>2 egg yolks</label>
-        </label></li>
-        <li><label><input type="checkbox"> <label>1 lemon, juiced</label>
-        </label></li>
-        <li><label><input type="checkbox"> <label>2 tbsp butter</label>
-        </label></li>
-        <li><label><input type="checkbox"> <label>1 cup honey roasted pecans, roughly chopped</label>
-        </label></li>
-			</ul>
-    </div>
-		</section>
-	<hr>
-	<!--start of author-->
-	<section>
-		<label></label>
-		<div id="headshot">
-			<label><img src=""></label>
-		</div><label></label>
-		<div id="Author">
-			<label></label>
-			<ul>
-				<li id="author-info"><label><img src="img/van-pic.png"></label></li>
-				<li><label>Vanessa Stevenson</label></li>
-				<li><label>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</label></li>
-			</ul>
-			<div id="share">
-				<label><button name="button" type="button"><label>SHARE RECIPE</label></button></label>
+			<div class="ingredients1">
+				<ul id="text1">
+					<li>
+						<input type="checkbox"> <label>1 1/2 cups milk</label>
+						<div style="clear:both"></div>
+					</li>
+					<li><input type="checkbox"> <label>1/2 cup marscapone</label></li>
+					<li style="list-style: none"><label></label></li>
+					<li><label><input type="checkbox"> <label>1/2 tsp pink salt</label></label></li>
+					<li style="list-style: none"><label></label></li>
+					<li><label><input type="checkbox"> <label>1 lb Black Mission Figs</label></label></li>
+					<li style="list-style: none"><label></label></li>
+					<li><label><input type="checkbox"> <label>1/2 cup brown sugar</label></label></li>
+					<li style="list-style: none"><label></label></li>
+					<li><label><input type="checkbox"> <label>2-4 tbsp water</label></label></li>
+					<li style="list-style: none"><label></label></li>
+				</ul>
 			</div>
-		</div>
+			<div class="ingredients2">
+				<ul id="text2">
+					<li><label><input type="checkbox"><label>1 1/2 cups heavy cream</label></label></li>
+					<li><label><input type="checkbox"><label>1/3 granulated</label></label></li>
+					<li style="list-style: none">sugar</li>
+					<li><label><input type="checkbox"><label>2 egg yolks</label></label></li>
+					<li><label><input type="checkbox"> <label>1 lemon, juiced</label></label></li>
+					<li><label><input type="checkbox"> <label>2 tbsp butter</label></label></li>
+					<li><label><input type="checkbox"> <label>1 cup honey roasted pecans, roughly chopped</label></label></li>
+				</ul>
+			</div>
+		</section>
+		<hr>
+		<section>
+			<label></label>
+			<div id="headshot">
+				<label><img src=""></label>
+			</div><label></label>
+			<div id="Author">
+				<label></label>
+				<ul>
+					<li id="author-info"><label><img src="img/van-pic.png"></label></li>
+					<li><label>Vanessa Stevenson</label></li>
+					<li><label>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</label></li>
+				</ul>
+				<div id="share">
+					<label><button name="button" type="button"><label><label>SHARE RECIPE</label></label></button></label>
+				</div>
+			</div>
+		</section>
+		<hr id="solid">
+		<footer>
+			<div class="line">
+				<span class="logo"></span>
+			</div>
+			<p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
+			<p>Proudly published with Ghost.</p>
+		</footer>
 	</section>
-	<hr id="solid">
-	<footer>
-		<div class="line">
-			<span class="logo"></span>
-		</div>
-		<p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
-		<p>Proudly published with Ghost.</p>
-	</footer>
 </body>
 </html>
