--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
 	<section>
 		<div id="pizza-img"><img src="img/choco-pizza.png"></div>
 	</section><!--end pizze photo section-->
+
 	<!--start recipie section-->
-	<section>
-		<div id="p-text1">
+	<section id="p-text">
+		<div class="p-text1">
 			<p>For the fig-swirl: melt butter over medium heat in a saucepan. Add brown sugar and stir to disolve. Halve all of the figs and toss into a saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one of two stirs, set aside and let cool completely.</p><br>
 		</div>
-		<div id="p-text2">
+		<div class="p-text2">
 			<p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewar. Whisk is in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p><br>
 		</div>
-		<div id="p-text3">
+		<div class="p-text3">
 			<p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
 		</div>
+	</section>
+	<!-- end text recipe -->
+	
 		<section id="container">
 			<div id="image"><img src="img/list-bg.png"></div>
 			<div class="ingredients1">
