--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 	<header>
-		<section>
 			<nav>
-				<div class="top"><img alt="logo" src="img/logo.png"></div>
-				<div class="company">
-					<ul>
-						<li class="#logo">Delicious</li>
+				<div id="top"><img alt="logo" src="img/logo.png"></div>
+					<ul id="company-tag">
+						<li id="company">Delicious</li>
 						<li id="tagline">THE BEST FOOD BLOG ON THE WEB</li>
 					</ul>
 				</div>
@@ -25,12 +23,11 @@
 						<li id="socialLogo"><img src="img/insta-icon.png"></li>
 						<li id="socialLogo"><img src="img/flic-icon.png"></li>
 						<li id="socialLogo"><img src="img/pint-icon.png"></li>
-						<li id="socialLogo"><img src="img/rss-icon.png"></li>
+						<li id="socialLogo-rs"><img src="img/rss-icon.png"></li>
 						<li id="socialLogo"><img src="img/mail-icon.png"></li>
 					</ul>
 				</div>
 			</nav>
-		</section>
 	</header><!--header-nav end.-->
 	<hr>
 	<!--start pizze photo section-->
@@ -63,7 +60,7 @@
 		</div>
 	</section>
 	<!-- end text recipe -->
-	
+
 		<section id="container">
 			<div id="image"><img src="img/list-bg.png"></div>
 			<div class="ingredients1">
