fixed some menu items

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div id="print">
 			<ul>
 				<li id="print-pic"><img src="img/print-icon.png"></li>
-				<li id="print-pic">PRINT</li>
+				<li id="print-word">PRINT</li>
 			</ul>
 		</div>
 	</section>
