fixed some menu items

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<title>Chocolate Pizza</title>
 	<link href="style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -12,7 +14,7 @@
 				<div id="top"><img alt="logo" src="img/logo.png"></div>
 					<ul id="company-tag">
 						<li id="company">Delicious</li>
-						<li id="tagline">THE BEST FOOD BLOG ON THE WEB</li>
+						<li id="tagline">THE BEST FOOD BLOG ON THE WEB.</li>
 					</ul>
 				</div>
 				<div id="menu">
@@ -32,12 +34,12 @@
 	<hr>
 	<!--start pizze photo section-->
 	<section>
-		<div id="recipe-name">
-			<p>Chocolate Pizza</p>
-			<p>POSTED ON 15 DEC 2013 / DESSERTS</p>
+		<div class="recipe-name">
+			<p id ="recipe-name">Chocolate Pizza</p>
+			<p id="recipe-post">POSTED ON 15 DEC 2013 / DESSERTS</p>
 		</div>
 		<div id="print">
-			<ul>
+			<ul id="print">
 				<li id="print-pic"><img src="img/print-icon.png"></li>
 				<li id="print-word">PRINT</li>
 			</ul>
