--- a/index.html
+++ b/index.html
@@ -11,46 +11,49 @@
 </head>
 <body>
 	<header>
-			<nav>
-				<div id="top"><img alt="logo" src="img/logo.png"></div>
-					<ul id="company-tag">
-						<li id="company">Delicious</li>
-						<li id="tagline">THE BEST FOOD BLOG ON THE WEB.</li>
-					</ul>
-				</div>
-				<div id="menu">
-					<ul id="social">
-						<li id="socialLogo"><img src="img/fb-icon.png"></li>
-						<li id="socialLogo"><img src="img/twit-icon.png"></li>
-						<li id="socialLogo"><img src="img/gp-icon.png"></li>
-						<li id="socialLogo"><img src="img/insta-icon.png"></li>
-						<li id="socialLogo"><img src="img/flic-icon.png"></li>
-						<li id="socialLogo"><img src="img/pint-icon.png"></li>
-						<li id="socialLogo-rs"><img src="img/rss-icon.png"></li>
-						<li id="socialLogo"><img src="img/mail-icon.png"></li>
-					</ul>
-				</div>
-			</nav>
-	</header><!--header-nav end.-->
+
+		<nav>
+			<div id="top"><img alt="logo" src="img/logo.png"></div>
+			<ul>
+				<li id="company">Delicious</li>
+				<li id="tagline">THE BEST FOOD BLOG ON THE WEB.</li>
+			</ul>
+			<div id="menu">
+				<ul id="social">
+					<li id="socialLogo"><img src="img/fb-icon.png"></li>
+					<li id="socialLogo"><img src="img/twit-icon.png"></li>
+					<li id="socialLogo"><img src="img/gp-icon.png"></li>
+					<li id="socialLogo"><img src="img/insta-icon.png"></li>
+					<li id="socialLogo"><img src="img/flic-icon.png"></li>
+					<li id="socialLogo"><img src="img/pint-icon.png"></li>
+					<li id="socialLogo-rs"><img src="img/rss-icon.png"></li>
+					<li id="socialLogo"><img src="img/mail-icon.png"></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<div class="clear-fix"></div>
+
 	<hr>
-	<!--start pizze photo section-->
+
 	<section>
 		<div class="recipe-name">
-			<p id ="recipe-name">Chocolate Pizza</p>
+			<p id="recipe-name">Chocolate Pizza</p>
 			<p id="recipe-post">POSTED ON 15 DEC 2013 / DESSERTS</p>
 		</div>
 		<div id="print">
-			<ul id="print">
+			<ul id="print-stuff">
 				<li id="print-pic"><img src="img/print-icon.png"></li>
 				<li id="print-word">PRINT</li>
 			</ul>
 		</div>
 	</section>
 	<section>
-		<div id="pizza-img"><img src="img/choco-pizza.png"></div>
-	</section><!--end pizze photo section-->
 
-	<!--start recipie section-->
+
+		<div id="pizza-img"><img src="img/choco-pizza.png"></div>
+	</section><
+
 	<section id="p-text">
 		<div class="p-text1">
 			<p>For the fig-swirl: melt butter over medium heat in a saucepan. Add brown sugar and stir to disolve. Halve all of the figs and toss into a saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one of two stirs, set aside and let cool completely.</p><br>
@@ -61,67 +64,53 @@
 		<div class="p-text3">
 			<p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
 		</div>
+	</section><!-- end text recipe -->
+	<section id="container">
+		<div id="image"><img src="img/list-bg.png"></div>
+		<div class="checkboxes">
+			<ul id="text1">
+				<li><input type="checkbox">1 1/2 cups milk</li>
+				<li><input type="checkbox">1/2 cup marscapone</li>
+				<li><input type="checkbox">1/2 tsp pink salt</li>
+				<li><input type="checkbox">1 lb Black Mission Figs</li>
+				<li><input type="checkbox">1/2 cup brown sugar</li>
+				<li><input type="checkbox">2-4 tbsp water</li>
+			</ul>
+		</div>
+		<div class="checkboxes">
+			<ul id="text2">
+				<li><input type="checkbox">  1/2 cups heavy cream</li>
+				<li><input type="checkbox">1/3 granulated</li>
+				<li><input type="checkbox">sugar</li>
+				<li><input type="checkbox">2 egg yolks</li>
+				<li><input type="checkbox">1 lemon, juiced</li>
+				<li><input type="checkbox">2 tbsp butter</li>
+				<li><input type="checkbox">1 cup honey roasted pecans, roughly <br/>chopped</li>
+			</ul>
+		</div>
 	</section>
-	<!-- end text recipe -->
+	<hr>
+	<section>
+		<div>
+			<ul>
+				<li id="author-photo"><img src="img/van-pic.png"></li>
+				<li id="author-text">Vanessa Stevenson</li>
+				<li id="author-text">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</li>
+			</ul>
+		</div>
 
-		<section id="container">
-			<div id="image"><img src="img/list-bg.png"></div>
-			<div class="ingredients1">
-				<ul id="text1">
-					<li>
-						<input type="checkbox"> <label>1 1/2 cups milk</label>
-						<div style="clear:both"></div>
-					</li>
-					<li><input type="checkbox"> <label>1/2 cup marscapone</label></li>
-					<li style="list-style: none"><label></label></li>
-					<li><label><input type="checkbox"> <label>1/2 tsp pink salt</label></label></li>
-					<li style="list-style: none"><label></label></li>
-					<li><label><input type="checkbox"> <label>1 lb Black Mission Figs</label></label></li>
-					<li style="list-style: none"><label></label></li>
-					<li><label><input type="checkbox"> <label>1/2 cup brown sugar</label></label></li>
-					<li style="list-style: none"><label></label></li>
-					<li><label><input type="checkbox"> <label>2-4 tbsp water</label></label></li>
-					<li style="list-style: none"><label></label></li>
-				</ul>
+			<div>
+				<ul id="button">
+						<button class="button">SHARE RECIPE</button>
 			</div>
-			<div class="ingredients2">
-				<ul id="text2">
-					<li><label><input type="checkbox"><label>1 1/2 cups heavy cream</label></label></li>
-					<li><label><input type="checkbox"><label>1/3 granulated</label></label></li>
-					<li style="list-style: none">sugar</li>
-					<li><label><input type="checkbox"><label>2 egg yolks</label></label></li>
-					<li><label><input type="checkbox"> <label>1 lemon, juiced</label></label></li>
-					<li><label><input type="checkbox"> <label>2 tbsp butter</label></label></li>
-					<li><label><input type="checkbox"> <label>1 cup honey roasted pecans, roughly chopped</label></label></li>
-				</ul>
-			</div>
-		</section>
-		<hr>
-		<section>
-			<label></label>
-			<div id="headshot">
-				<label><img src=""></label>
-			</div><label></label>
-			<div id="Author">
-				<label></label>
-				<ul>
-					<li id="author-info"><label><img src="img/van-pic.png"></label></li>
-					<li><label>Vanessa Stevenson</label></li>
-					<li><label>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</label></li>
-				</ul>
-				<div id="share">
-					<label><button name="button" type="button"><label><label>SHARE RECIPE</label></label></button></label>
-				</div>
-			</div>
-		</section>
-		<hr id="solid">
-		<footer>
-			<div class="line">
-				<span class="logo"></span>
-			</div>
-			<p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
-			<p>Proudly published with Ghost.</p>
-		</footer>
 	</section>
+	<hr id="solid">
+	<footer>
+		<div class="line">
+			<span class="logo"></span>
+		</div>
+		<p>Delicious &copy; 2013 &middot; All Rights Reserved.</p>
+		<p>Proudly published with Ghost.</p>
+	</footer>
 </body>
 </html>
